# InitM4

./: .gitignore  .hgignore  CheckConstExpr.m4  CheckDefaultDeclarations.m4  CheckExtraFlags.m4  CheckOverride.m4  CheckRightValueReference.m4  CheckTargetSystem.m4  ConfigDirectory.m4  DefaultBuildOptions.m4  DefaultCompileOptions.m4  EnableCxx11.m4  GenConfigFiles.m4  Makefile.DirList.inc  Makefile.Install.inc  Makefile.am  README.md  WithExtLibs.m4  WithExtPkgs.m4
BuildCommon/: Makefile.am
Checks/: CheckExtraFlags.m4  DefaultDeclarations.m4  EnableCxx11.m4  Makefile.am  NullPtr.m4  Override.m4  StaticAssert.m4
Makefiles/: DefVars.inc  Install.inc  Makefile.am
