
##
##    List of Directories.
##

SUBDIRS         =  .  BuildCommon  Checks  Packages
DIST_SUBDIRS    =  $(SUBDIRS)

##
##    List of Installs.
##

dist_noinst_DATA    =  \
    ConfigDirectory.m4          \
    DefaultBuildOptions.m4      \
    InitAutoMake.m4             \
    TargetSystem.m4             \
    ${extra_noinst_data_files}
