
##
##    List of Directories.
##

##
##    List of Installs.
##

dist_noinst_DATA    =  \
    CheckExtraFlags.m4          \
    ConstExpr.m4                \
    DefaultDeclarations.m4      \
    EnableCxx11.m4              \
    NullPtr.m4                  \
    Override.m4                 \
    RightValueReference.m4      \
    StaticAssert.m4             \
    ${extra_noinst_data_files}
